--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@sa/antv",
+  "name": "@sa/antd",
   "version": "2.0.0",
-  "description": "A fresh and elegant admin template, based on Vue3、Vite3、TypeScript、AntV and UnoCSS.",
+  "description": "A fresh and elegant admin template, based on Vue3、Vite3,TypeScript,AntDesign and UnoCSS.",
   "author": {
     "name": "Soybean",
     "email": "soybeanjs@outlook.com",
