feat(projects): route store

--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ VITE_ICON_PREFIX=icon
 # the prefix of the local svg icon component, must include VITE_ICON_PREFIX
 # format {VITE_ICON_PREFIX}-{local icon name}
 VITE_ICON_LOCAL_PREFIX=icon-local
+
+# auth route mode: static ｜ dynamic
+VITE_AUTH_ROUTE_MODE=static
+
+# static auth route home
+VITE_ROUTE_HOME=home
