--- a/package.json
+++ b/package.json
@@ -31,30 +31,30 @@
     "lodash-es": "4.17.21",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
-    "vue": "3.3.6",
-    "vue-i18n": "9.5.0",
+    "vue": "3.3.7",
+    "vue-i18n": "9.6.5",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@elegant-router/vue": "0.2.6",
+    "@elegant-router/vue": "0.3.0-beta.0",
     "@iconify-json/heroicons": "1.1.13",
     "@iconify-json/ic": "1.1.14",
     "@iconify-json/icon-park-outline": "1.1.12",
     "@iconify-json/line-md": "1.1.33",
     "@iconify-json/logos": "1.1.37",
-    "@iconify-json/material-symbols": "1.1.60",
+    "@iconify-json/material-symbols": "1.1.61",
     "@iconify-json/ph": "1.1.6",
-    "@iconify-json/tabler": "1.1.95",
+    "@iconify-json/tabler": "1.1.96",
     "@sa/scripts": "workspace:*",
     "@sa/uno-preset": "workspace:*",
     "@types/lodash-es": "4.17.10",
-    "@types/node": "20.8.7",
+    "@types/node": "20.8.10",
     "@types/nprogress": "0.2.2",
-    "@unocss/preset-icons": "0.57.0",
-    "@unocss/preset-uno": "0.57.0",
-    "@unocss/transformer-directives": "0.57.0",
-    "@unocss/transformer-variant-group": "0.57.0",
-    "@unocss/vite": "0.57.0",
+    "@unocss/preset-icons": "0.57.2",
+    "@unocss/preset-uno": "0.57.2",
+    "@unocss/transformer-directives": "0.57.2",
+    "@unocss/transformer-variant-group": "0.57.2",
+    "@unocss/vite": "0.57.2",
     "@vitejs/plugin-vue": "4.4.0",
     "@vitejs/plugin-vue-jsx": "3.0.2",
     "cross-env": "7.0.3",
@@ -63,13 +63,13 @@
     "simple-git-hooks": "2.9.0",
     "typescript": "5.2.2",
     "unocss-preset-scrollbar": "0.3.0",
-    "unplugin-icons": "0.17.1",
+    "unplugin-icons": "0.17.3",
     "unplugin-vue-components": "0.25.2",
     "vite": "4.5.0",
     "vite-plugin-progress": "0.0.7",
     "vite-plugin-svg-icons": "2.0.1",
     "vite-plugin-vue-devtools": "1.0.0-rc.5",
-    "vue-tsc": "1.8.20"
+    "vue-tsc": "1.8.22"
   },
   "simple-git-hooks": {
     "commit-msg": "pnpm sa git-commit-verify",
