feat(projects): service and proxy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "Antd",
     "antv",
+    "apifox",
     "clsx",
     "colord",
     "consola",
@@ -17,6 +18,7 @@
     "Laba",
     "localforage",
     "LOCALSTORAGE",
+    "MEDZ",
     "nocheck",
     "nprogress",
     "ofetch",
