feat(projects): login, antdv useApp, form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "paths": {
-      "~/*": ["./*"],
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "~/*": ["./*"]
     },
     "types": [
       "vite/client",
