--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "email": "soybeanjs@outlook.com",
     "url": "https://github.com/soybeanjs"
   },
+  "packageManager": "pnpm@8.10.2",
   "scripts": {
     "dev": "vite",
     "build": "run-s typecheck build-only",
