--- a/package.json
+++ b/package.json
@@ -40,14 +40,7 @@
   },
   "devDependencies": {
     "@elegant-router/vue": "0.3.0-beta.6",
-    "@iconify-json/heroicons": "1.1.13",
-    "@iconify-json/ic": "1.1.14",
-    "@iconify-json/icon-park-outline": "1.1.12",
-    "@iconify-json/line-md": "1.1.33",
-    "@iconify-json/logos": "1.1.37",
-    "@iconify-json/material-symbols": "1.1.61",
-    "@iconify-json/ph": "1.1.6",
-    "@iconify-json/tabler": "1.1.96",
+    "@iconify/json": "2.2.138",
     "@sa/scripts": "workspace:*",
     "@sa/uno-preset": "workspace:*",
     "@types/lodash-es": "4.17.11",
