refactor(projects): refactor ColorPicker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,6 @@
     "apifox",
     "clsx",
     "colord",
-    "colorpicker",
     "consola",
     "Destructurable",
     "EDITMSG",
@@ -13,6 +12,7 @@
     "execa",
     "gridicons",
     "heroicons",
+    "HEXA",
     "hexcode",
     "iconify",
     "INDEXEDDB",
@@ -26,8 +26,10 @@
     "nocheck",
     "nprogress",
     "ofetch",
+    "pickr",
     "preflights",
     "sider",
+    "simonwep",
     "simplebar",
     "tada",
     "Uncapitalize",
