--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "cross-env": "7.0.3",
     "eslint-config-sa": "workspace:*",
     "npm-run-all": "4.1.5",
+    "sass": "^1.69.5",
     "simple-git-hooks": "2.9.0",
     "typescript": "5.2.2",
-    "unocss-preset-scrollbar": "0.3.0",
     "unplugin-icons": "0.17.3",
     "unplugin-vue-components": "0.25.2",
     "vite": "4.5.0",
