--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@sa/utils": "workspace:*",
     "@vueuse/core": "10.6.1",
     "ant-design-vue": "4.0.7",
+    "clipboard": "2.0.11",
     "lodash-es": "4.17.21",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
