--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vueuse/core": "10.6.1",
     "ant-design-vue": "4.0.7",
     "clipboard": "2.0.11",
+    "dayjs": "^1.11.10",
     "lodash-es": "4.17.21",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
