--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "preview": "vite preview",
     "release": "sa release",
     "typecheck": "vue-tsc --noEmit --skipLibCheck",
-    "update-pkg": "sou ncu"
+    "update-pkg": "sa update-pkg"
   },
   "dependencies": {
     "@better-scroll/core": "2.5.1",
@@ -30,49 +30,49 @@
     "@sa/materials": "workspace:*",
     "@sa/request": "workspace:*",
     "@sa/utils": "workspace:*",
-    "@vueuse/core": "10.6.1",
+    "@vueuse/core": "10.7.0",
     "ant-design-vue": "4.0.7",
     "clipboard": "2.0.11",
     "dayjs": "1.11.10",
     "lodash-es": "4.17.21",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
-    "vue": "3.3.8",
-    "vue-i18n": "9.7.0",
+    "vue": "3.3.11",
+    "vue-i18n": "9.8.0",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
     "@elegant-router/vue": "0.3.1",
-    "@iconify/json": "2.2.143",
+    "@iconify/json": "2.2.154",
     "@sa/scripts": "workspace:*",
     "@sa/uno-preset": "workspace:*",
     "@soybeanjs/eslint-config": "1.0.11",
-    "@types/lodash-es": "4.17.11",
-    "@types/node": "20.9.1",
+    "@types/lodash-es": "4.17.12",
+    "@types/node": "20.10.4",
     "@types/nprogress": "0.2.3",
-    "@unocss/preset-icons": "0.57.5",
-    "@unocss/preset-uno": "0.57.5",
-    "@unocss/transformer-directives": "0.57.5",
-    "@unocss/transformer-variant-group": "0.57.5",
-    "@unocss/vite": "0.57.5",
-    "@vitejs/plugin-vue": "4.5.0",
+    "@unocss/preset-icons": "0.58.0",
+    "@unocss/preset-uno": "0.58.0",
+    "@unocss/transformer-directives": "0.58.0",
+    "@unocss/transformer-variant-group": "0.58.0",
+    "@unocss/vite": "0.58.0",
+    "@vitejs/plugin-vue": "4.5.2",
     "@vitejs/plugin-vue-jsx": "3.1.0",
     "cross-env": "7.0.3",
-    "eslint": "8.53.0",
+    "eslint": "8.55.0",
     "eslint-plugin-vue": "9.19.2",
-    "lint-staged": "15.1.0",
+    "lint-staged": "15.2.0",
     "npm-run-all": "4.1.5",
     "sass": "1.69.5",
     "simple-git-hooks": "2.9.0",
-    "typescript": "5.2.2",
-    "unplugin-icons": "0.17.4",
-    "unplugin-vue-components": "0.25.2",
-    "vite": "5.0.0",
+    "typescript": "5.3.3",
+    "unplugin-icons": "0.18.1",
+    "unplugin-vue-components": "0.26.0",
+    "vite": "5.0.7",
     "vite-plugin-progress": "0.0.7",
     "vite-plugin-svg-icons": "2.0.1",
-    "vite-plugin-vue-devtools": "1.0.0-rc.5",
+    "vite-plugin-vue-devtools": "1.0.0-rc.7",
     "vue-eslint-parser": "9.3.2",
-    "vue-tsc": "1.8.22"
+    "vue-tsc": "1.8.25"
   },
   "simple-git-hooks": {
     "commit-msg": "pnpm sa git-commit-verify",
