--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint . --fix",
     "prepare": "simple-git-hooks",
     "preview": "vite preview",
-    "release": "sa release",
+    "release": "soy release",
     "typecheck": "vue-tsc --noEmit --skipLibCheck",
     "update-pkg": "sa update-pkg"
   },
@@ -43,10 +43,11 @@
   },
   "devDependencies": {
     "@elegant-router/vue": "0.3.1",
-    "@iconify/json": "2.2.154",
+    "@iconify/json": "2.2.157",
     "@sa/scripts": "workspace:*",
     "@sa/uno-preset": "workspace:*",
-    "@soybeanjs/eslint-config": "1.0.11",
+    "@soybeanjs/cli": "1.0.0-beta.7",
+    "@soybeanjs/eslint-config": "1.1.2",
     "@types/lodash-es": "4.17.12",
     "@types/node": "20.10.4",
     "@types/nprogress": "0.2.3",
@@ -64,13 +65,14 @@
     "npm-run-all": "4.1.5",
     "sass": "1.69.5",
     "simple-git-hooks": "2.9.0",
+    "tsx": "4.6.2",
     "typescript": "5.3.3",
     "unplugin-icons": "0.18.1",
     "unplugin-vue-components": "0.26.0",
-    "vite": "5.0.7",
+    "vite": "5.0.8",
     "vite-plugin-progress": "0.0.7",
     "vite-plugin-svg-icons": "2.0.1",
-    "vite-plugin-vue-devtools": "1.0.0-rc.7",
+    "vite-plugin-vue-devtools": "1.0.0-rc.8",
     "vue-eslint-parser": "9.3.2",
     "vue-tsc": "1.8.25"
   },
