--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   "dependencies": {
     "@better-scroll/core": "2.5.1",
     "@iconify/vue": "4.1.1",
+    "@sa/axios": "workspace:^",
     "@sa/color-palette": "workspace:*",
+    "@sa/fetch": "workspace:*",
     "@sa/hooks": "workspace:*",
     "@sa/materials": "workspace:*",
-    "@sa/request": "workspace:*",
     "@sa/utils": "workspace:*",
     "@vueuse/core": "10.7.0",
     "ant-design-vue": "4.0.7",
