--- a/packages/ofetch/package.json
+++ b/packages/ofetch/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sa/request",
+  "name": "@sa/fetch",
   "version": "1.0.0",
   "exports": {
     ".": "./src/index.ts"
@@ -10,7 +10,6 @@
     }
   },
   "dependencies": {
-    "axios": "1.6.2",
     "ofetch": "1.3.3"
   }
 }
