--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "colord": "2.9.3",
     "crypto-js": "4.2.0",
-    "localforage": "1.10.0"
+    "localforage": "1.10.0",
+    "nanoid": "5.0.4"
   },
   "devDependencies": {
     "@types/crypto-js": "4.2.1"
