--- a/package.json
+++ b/package.json
@@ -31,51 +31,51 @@
     "@sa/hooks": "workspace:*",
     "@sa/materials": "workspace:*",
     "@sa/utils": "workspace:*",
-    "@vueuse/core": "10.7.0",
-    "ant-design-vue": "4.0.7",
+    "@vueuse/core": "10.7.1",
+    "ant-design-vue": "4.0.8",
     "clipboard": "2.0.11",
     "dayjs": "1.11.10",
     "lodash-es": "4.17.21",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
-    "vue": "3.3.11",
+    "vue": "3.4.3",
     "vue-i18n": "9.8.0",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
     "@elegant-router/vue": "0.3.1",
-    "@iconify/json": "2.2.157",
+    "@iconify/json": "2.2.163",
     "@sa/scripts": "workspace:*",
     "@sa/uno-preset": "workspace:*",
-    "@soybeanjs/cli": "1.0.0-beta.7",
-    "@soybeanjs/eslint-config": "1.1.3",
+    "@soybeanjs/cli": "1.0.0",
+    "@soybeanjs/eslint-config": "1.1.4",
     "@types/lodash-es": "4.17.12",
-    "@types/node": "20.10.4",
+    "@types/node": "20.10.6",
     "@types/nprogress": "0.2.3",
-    "@unocss/preset-icons": "0.58.0",
-    "@unocss/preset-uno": "0.58.0",
-    "@unocss/transformer-directives": "0.58.0",
-    "@unocss/transformer-variant-group": "0.58.0",
-    "@unocss/vite": "0.58.0",
-    "@vitejs/plugin-vue": "4.5.2",
+    "@unocss/preset-icons": "0.58.2",
+    "@unocss/preset-uno": "0.58.2",
+    "@unocss/transformer-directives": "0.58.2",
+    "@unocss/transformer-variant-group": "0.58.2",
+    "@unocss/vite": "0.58.2",
+    "@vitejs/plugin-vue": "5.0.2",
     "@vitejs/plugin-vue-jsx": "3.1.0",
     "cross-env": "7.0.3",
-    "eslint": "8.55.0",
+    "eslint": "8.56.0",
     "eslint-plugin-vue": "9.19.2",
     "lint-staged": "15.2.0",
     "npm-run-all": "4.1.5",
-    "sass": "1.69.5",
+    "sass": "1.69.6",
     "simple-git-hooks": "2.9.0",
-    "tsx": "4.6.2",
+    "tsx": "4.7.0",
     "typescript": "5.3.3",
     "unplugin-icons": "0.18.1",
     "unplugin-vue-components": "0.26.0",
-    "vite": "5.0.8",
+    "vite": "5.0.10",
     "vite-plugin-progress": "0.0.7",
     "vite-plugin-svg-icons": "2.0.1",
-    "vite-plugin-vue-devtools": "1.0.0-rc.8",
+    "vite-plugin-vue-devtools": "7.0.2",
     "vue-eslint-parser": "9.3.2",
-    "vue-tsc": "1.8.25"
+    "vue-tsc": "1.8.27"
   },
   "simple-git-hooks": {
     "commit-msg": "pnpm sa git-commit-verify",
