--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@sa/docs",
+  "type": "module",
   "version": "1.0.0",
   "scripts": {
     "build": "vitepress build",
-    "dev": "vitepress dev",
+    "dev": "vitepress dev --port 1026",
     "serve": "vitepress serve"
   },
   "devDependencies": {
