--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ant-design-vue": "4.1.1",
     "clipboard": "2.0.11",
     "dayjs": "1.11.10",
+    "echarts": "5.4.3",
     "lodash-es": "4.17.21",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
