chore(projects): lock deps version

--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "@sa/utils": "workspace:*",
     "axios": "1.6.5",
-    "axios-retry": "^4.0.0"
+    "axios-retry": "4.0.0"
   }
 }
