--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "@better-scroll/core": "2.5.1",
     "@iconify/vue": "4.1.1",
-    "@sa/axios": "workspace:^",
+    "@sa/axios": "workspace:*",
     "@sa/color-palette": "workspace:*",
     "@sa/fetch": "workspace:*",
     "@sa/hooks": "workspace:*",
