--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -19,7 +19,7 @@
     "consola": "3.2.3",
     "enquirer": "2.4.1",
     "execa": "8.0.1",
-    "kolorist": "^1.8.0",
+    "kolorist": "1.8.0",
     "npm-check-updates": "16.14.12",
     "rimraf": "5.0.5"
   }
