feat(projects): @sa/axios: add qs stringify for params

--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@sa/utils": "workspace:*",
     "axios": "1.6.5",
-    "axios-retry": "4.0.0"
+    "axios-retry": "4.0.0",
+    "qs": "6.11.2"
+  },
+  "devDependencies": {
+    "@types/qs": "6.9.11"
   }
 }
