--- a/packages/materials/package.json
+++ b/packages/materials/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sa/utils": "workspace:*",
     "@simonwep/pickr": "1.9.0",
+    "@vueuse/core": "10.7.2",
     "simplebar-vue": "2.3.3"
   },
   "devDependencies": {
