--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "url": "https://github.com/soybeanjs"
   },
   "license": "MIT",
-  "homepage": "https://github.com/honghuangdc/soybean-admin",
+  "homepage": "https://github.com/soybeanjs/soybean-admin-antd",
   "repository": {
-    "url": "https://github.com/honghuangdc/soybean-admin.git"
+    "url": "https://github.com/soybeanjs/soybean-admin-antd.git"
   },
   "bugs": {
-    "url": "https://github.com/honghuangdc/soybean-admin/issues"
+    "url": "https://github.com/soybeanjs/soybean-admin-antd/issues"
   },
   "keywords": [
     "Vue3 admin ",
@@ -103,5 +103,5 @@
   "lint-staged": {
     "*": "eslint --fix"
   },
-  "website": "https://admin.soybeanjs.cn"
+  "website": "https://antd.soybeanjs.cn"
 }
