--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "UnoCSS"
   ],
   "scripts": {
-    "build": "run-s typecheck build-only",
-    "build-only": "vite build",
+    "build": "vite build --mode prod",
+    "build:test": "vite build --mode test",
     "cleanup": "sa cleanup",
     "commit": "sa git-commit",
-    "dev": "vite",
+    "dev": "vite --mode test",
+    "dev:prod": "vite --mode prod",
     "gen-route": "sa gen-route",
     "lint": "eslint . --fix",
     "prepare": "simple-git-hooks",
@@ -78,11 +79,9 @@
     "@unocss/vite": "0.58.5",
     "@vitejs/plugin-vue": "5.0.4",
     "@vitejs/plugin-vue-jsx": "3.1.0",
-    "cross-env": "7.0.3",
     "eslint": "8.57.0",
     "eslint-plugin-vue": "9.22.0",
     "lint-staged": "15.2.2",
-    "npm-run-all": "4.1.5",
     "sass": "1.71.1",
     "simple-git-hooks": "2.10.0",
     "tsx": "4.7.1",
