--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
     "vue": "3.4.21",
+    "vue-draggable-plus": "0.4.0",
     "vue-i18n": "9.12.0",
     "vue-router": "4.3.0"
   },
