--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": ["src/locales/langs"],
   "prettier.enable": false,
-  "unocss.root": ["./"]
+  "unocss.root": ["./"],
+  "vue.server.hybridMode": false
 }
