--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@better-scroll/core": "2.5.1",
     "@iconify/vue": "4.1.2",
     "@sa/axios": "workspace:*",
-    "@sa/color-palette": "workspace:*",
+    "@sa/color": "workspace:*",
     "@sa/fetch": "workspace:*",
     "@sa/hooks": "workspace:*",
     "@sa/materials": "workspace:*",
