--- a/.env
+++ b/.env
@@ -40,3 +40,6 @@ VITE_SERVICE_EXPIRED_TOKEN_CODES=9999,9998
 
 # when the route mode is static, the defined super role
 VITE_STATIC_SUPER_ROLE=R_SUPER
+
+# Used to differentiate storage across different domains
+VITE_STORAGE_PREFIX=SOY_
