--- a/package.json
+++ b/package.json
@@ -55,14 +55,14 @@
     "@sa/materials": "workspace:*",
     "@sa/utils": "workspace:*",
     "@vueuse/core": "10.10.0",
-    "ant-design-vue": "4.2.1",
+    "ant-design-vue": "4.2.2",
     "clipboard": "2.0.11",
     "dayjs": "1.11.11",
     "echarts": "5.5.0",
     "lodash-es": "4.17.21",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "2.3.0",
     "vue": "3.4.27",
     "vue-draggable-plus": "0.5.0",
     "vue-i18n": "9.13.1",
@@ -70,7 +70,7 @@
   },
   "devDependencies": {
     "@elegant-router/vue": "0.3.7",
-    "@iconify/json": "2.2.216",
+    "@iconify/json": "2.2.217",
     "@sa/scripts": "workspace:*",
     "@sa/uno-preset": "workspace:*",
     "@soybeanjs/eslint-config": "1.3.6",
