chore(deps): update deps

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -18,7 +18,7 @@
     "c12": "1.10.0",
     "cac": "6.7.14",
     "consola": "3.2.3",
-    "enquirer": "^2.4.1",
+    "enquirer": "2.4.1",
     "execa": "9.2.0",
     "kolorist": "1.8.0",
     "npm-check-updates": "16.14.20",
