feat(projects): does the configuration support automatic updates

--- a/.env
+++ b/.env
@@ -43,3 +43,6 @@ VITE_STATIC_SUPER_ROLE=R_SUPER
 
 # Used to differentiate storage across different domains
 VITE_STORAGE_PREFIX=SOY_
+
+# used to control whether the program automatically detects updates
+VITE_AUTOMATICALLY_DETECT_UPDATE=Y
