--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build:test": "vite build --mode test",
     "cleanup": "sa cleanup",
     "commit": "sa git-commit",
-    "czh": "sa git-commit -l=zh-cn",
+    "commit:zh": "sa git-commit -l=zh-cn",
     "dev": "vite --mode test",
     "dev:prod": "vite --mode prod",
     "gen-route": "sa gen-route",
