--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "clipboard": "2.0.11",
     "dayjs": "1.11.13",
     "echarts": "5.5.1",
+    "json5": "2.2.3",
     "nprogress": "0.2.0",
     "pinia": "2.2.2",
     "tailwind-merge": "2.5.2",
