--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ant-design-vue": "4.2.6",
     "clipboard": "2.0.11",
     "dayjs": "1.11.13",
+    "defu": "6.1.4",
     "echarts": "5.5.1",
     "json5": "2.2.3",
     "nprogress": "0.2.0",
